Fixes #15398.  Add -moz-user-focus:ignore to down arrow button to prevent screen reader focusing on Firefox even with tabIndex=-1.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@28678 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -2139,3 +2139,7 @@ div.dijitTabDisabled, .dj_ie div.dijitTabDisabled {
 .dojoDndItemOver {
 	cursor:pointer;
 }
+.dj_gecko .dijitArrowButtonInner INPUT,
+.dj_gecko INPUT.dijitArrowButtonInner {
+	-moz-user-focus:ignore;
+}
